--- a/src/app/modules/login/login/login.component.css
+++ b/src/app/modules/login/login/login.component.css
@@ -83,3 +83,19 @@
          color: #ff0000;
          }
          #second{display:none;}
+
+
+.btn-get-started {
+            color: #213b52;
+            border-radius: 50px;
+            padding: 8px 35px 10px 35px;
+            border: 2px solid #fdc134;
+            transition: all ease-in-out 0.3s;
+            display: inline-block;
+            background: #fdc134;
+          }
+          
+ .btn-get-started:hover {
+            background: transparent;
+            color: #fff;
+          }
