--- a/src/app/modules/login/login/login.component.html
+++ b/src/app/modules/login/login/login.component.html
@@ -38,7 +38,7 @@
    -->
 
 <!-- <div class="container "> -->
-  <!-- <div class="row bg-dark d-flex align-items-center col-md-12" style="height: 100vh;">
+<!-- <div class="row bg-dark d-flex align-items-center col-md-12" style="height: 100vh;">
     <div class="col-md-5 mx-auto">
       <div id="first">
         <div class="myform form ">
@@ -85,13 +85,72 @@
         </div>
       </div>
     </div> -->
-    
-  <!-- </div> -->
 
+<!-- </div> -->
 
-  <div class="d-flex col-md-12 bg-dark justify-content-center align-items-center" style="height: 100vh;">
+<div class=" d-flex justify-content-between flex-wrap align-items-top col-md-12 m-0 p-0" style="height: 100vh;">
+  <div class="col-md-10 mt-5" style="margin-left: 8%;">
 
-    <div class=" d-flex justify-content-center align-items-center col-md-6 " >
+    <h2> <strong> Pretty Call</strong></h2>
+    <p>Pretty Call is portal created with the aim of facilitating the planning of coaching sessions. The platform
+      provides the functionalities needed for efficient planning of such sessions, as well as a procedural integration
+      with Veeva Engage and a process allowing coaches to provide their feedbacks. </p>
+
+  </div>
+  <div class="col-md-6 mt-5 ">
+    <div class=" d-flex justify-content-center align-items-center col-md-12 p-0 m-0">
+      <div class="myform form " style="background-color: #1fa0fc; height: auto;">
+        <div class="logo mb-3">
+          <div class="col-md-12 text-white text-center">
+            <h1>Login</h1>
+          </div>
+        </div>
+        <form method="POST" [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
+          <div class="form-group text-white">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" placeholder="example@gmail.com" title="Please enter you mail" name="mail" id="mail"
+              class="form-control" formControlName="email">
+            <div class="alert alert-danger" *ngIf="f.email.touched && f.email.invalid">
+              <div *ngIf="f.email.errors.required">please put email</div>
+              <div *ngIf="f.password.errors.pattern">insert a complicated password</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Password</label>
+            <input type="password" title="Please enter your password" placeholder="********" name="password"
+              id="password" class="form-control" formControlName="password">
+            <div class="alert alert-danger" *ngIf="f.password.touched && f.password.invalid">
+              <div *ngIf="f.password.errors.required">please put password</div>
+              <div *ngIf="f.password.errors.pattern">insert a complicated password</div>
+            </div>
+          </div>
+
+          <div class="col-md-12 mt-4 mb-5 text-center ">
+            <!-- <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm"
+              [disabled]="!loginForm.valid">Login</button> -->
+            <button type="submit" [disabled]="!loginForm.valid" class="col-md-12 btn-get-started scrollto">Sign
+              in</button>
+
+          </div>
+
+        </form>
+
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6  " data-aos="fade-left">
+    <img src="https://image.freepik.com/free-vector/live-webinar-sign-icon_118124-4681.jpg" class="img-fluid" alt="">
+  </div>
+</div>
+
+<!-- <div class="d-flex col-md-12 bg-dark justify-content-center align-items-center" style="height: 100vh;">
+    <img src="https://blog.nash.io/content/images/2020/06/team2.png" style="background-position: center;
+    background-repeat: no-repeat;background-size: cover; height: 100%; width: 100%;" alt="">
+
+    <div style="position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)" class=" d-flex justify-content-center align-items-center col-md-6 " >
       <div class="myform form bg-light">
         <div class="logo mb-3">
           <div class="col-md-12 text-center">
@@ -105,7 +164,7 @@
             class="form-control" formControlName="email">
             <div class="alert alert-danger" *ngIf="f.email.touched && f.email.invalid">
               <div *ngIf="f.email.errors.required">please put email</div>
-              <!-- <div *ngIf="f.password.errors.pattern">insert a complicated password</div> -->
+              <div *ngIf="f.password.errors.pattern">insert a complicated password</div>
           </div>
           </div>
           <div class="form-group">
@@ -114,7 +173,7 @@
             id="password" class="form-control" formControlName="password">
             <div class="alert alert-danger" *ngIf="f.password.touched && f.password.invalid">
               <div *ngIf="f.password.errors.required">please put password</div>
-              <!-- <div *ngIf="f.password.errors.pattern">insert a complicated password</div> -->
+              <div *ngIf="f.password.errors.pattern">insert a complicated password</div>
           </div>
           </div>
           
@@ -126,4 +185,4 @@
 
       </div>
     </div>
-  </div>
+  </div> -->
