update coachee and access management

--- a/src/app/modules/access-management/access-management.component.html
+++ b/src/app/modules/access-management/access-management.component.html
@@ -182,7 +182,7 @@
 
                         </div> -->
 
-                        <div class="form-group col-md-12">
+                        <!-- <div class="form-group col-md-12">
                             <label>Profile Image</label>
                             <div class="input-group mb-3" *ngIf="showUploadImg">
                                 <div class="input-group-prepend">
@@ -197,7 +197,7 @@
                             </div>
                                 <img [src]="imgUrl" height="200" *ngIf="imgUrl">
                             
-                        </div>
+                        </div> -->
                     </div>
 
                     <!-- Modal Footer-->
