--- a/src/app/modules/landing-coachee/landing-coachee.component.html
+++ b/src/app/modules/landing-coachee/landing-coachee.component.html
@@ -172,7 +172,7 @@
             </div> <!-- Modal Body-->
 
             <div class="modal-body ">
-                <form method="get" [formGroup]="form" >
+                <form method="get" [formGroup]="form">
 
                     <div class="text-center">
                         <h5 id="Newsession_subtitle">Create new coaching session</h5>
@@ -181,14 +181,10 @@
                     <input type="text" hidden id="rowIdHasBeenSelected">
                     <div class="form-group">
                         <label for="exampleFormControlSelect1" id="Newsession_select_coach"> Select the coah *</label>
-                        <select class="form-control mb-3" id="coachNamesList">
-                            <!-- <option selected></option> -->
-                            <option>Hassan Zarrad</option>
-                            <option>Hamza</option>
-
+                        <select class="form-control mb-3" formControlName="coachSelected" id="coachSelected">
+                            <option *ngFor="let item of coachsList" [ngValue]="item.id">{{item.name}}
+                            </option>
                         </select>
-                        <!-- <select disabled class="form-control mb-3" id="coachNamesListDraft">
-                    </select> -->
 
                         <!-- ********* Coach table***************** -->
                         <table datatable [dtOptions]="dtOptions"
@@ -203,7 +199,8 @@
                             </thead>
                             <tbody>
                                 <tr *ngFor="let item of coachsList">
-                                    <td><input type="radio"></td>
+                                    <td>   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                    </td>
                                     <td>{{ item.name }}</td>
                                     <td>{{ item.email }}</td>
                                     <td>{{ item.role }}</td>
@@ -216,7 +213,7 @@
                     <div class="row">
                         <div class="form-group col-md-6">
                             <label class="col-sm-6 col-form-label" id="Newsession_select_date">Select date</label>
-                            <input type="date" class="form-control" id="scheduledStart"
+                            <input type="datetime-local" class="form-control" id="scheduledStart"
                                 formControlName="scheduledStart">
                             <!-- <input type="date"  class="form-control" id="scheduledEnd" formControlName="scheduledEnd" > -->
                         </div>
@@ -402,7 +399,8 @@
                     id="Popup_Callform_return_submit" (click)="submit()">Save</button>
                 <button class="btn text-white" style="background-color: #24252A;"
                     id="Popup_Callform_return_send">Send</button>
-                <a href="" class="btn btn-outline-dark" data-dismiss="modal" id="Popup_Callform_return" #closebutton>Cancell</a>
+                <a href="" class="btn btn-outline-dark" data-dismiss="modal" id="Popup_Callform_return"
+                    #closebutton>Cancell</a>
             </div>
             <!-- Modal Footer-->
             <!-- <div class="modal-footer" id="modalFooter2">
