update login UI

--- a/src/app/modules/landing-admin/landing-admin.component.html
+++ b/src/app/modules/landing-admin/landing-admin.component.html
@@ -24,9 +24,31 @@
             </div>
         </div>
     </div>
-    <div class="col-md-12  m-0 p-0">
+    <div class="d-flex jsutify-content-bteween col-md-12  m-0 p-0">
+        <div class="col-md-3 m-0 p-0  ">
+            <div class="d-flex mt-4 flex-wrap">
+                <div class="col-md-12">
+                    <h5 style="height: 30px;" class="mb-4" id="KPI_completed_sessions">N° of Sessions performed in the month
+                    </h5>
+                    <h2><strong id="TotalSessionsAdmin">5</strong></h2>
+                    <hr>
+                </div>
+                <div class="col-md-12">
+                    <h5 style="height: 30px;" class="mb-4" id="KPI_planned_sessions">N° of Sessions carried out in the last
+                        3 months</h5>
+                    <h2><strong id="totalSessionsPlannedAdmin">3</strong></h2>
+                    <hr>
+    
+                </div>
+                <div class="col-md-12">
+                    <h5 style="height: 30px;" class="mb-4" id="KPI_planned_sessions">N° of Sessions carried out in the last
+                        3 months</h5>
+                    <h2><strong id="totalSessionsPlannedAdmin">3</strong></h2>    
+                </div>
+            </div>
+        </div>
         <!-- *************** chart js line statistic******* -->
-        <div class="col-md-12">
+        <div class="col-md-9">
             <canvas id="myChart" height="130"></canvas>
         </div>
     </div>
