--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -16,12 +16,8 @@
       </div>
     </div>
     <div class="list-group list-group-flush">
-      <a href="#" *ngIf="userRoleStatus == 'Admin'" class="list-group-item list-group-item-action bg-light"
+      <a href="#" class="list-group-item list-group-item-action bg-light"
         routerLink="Home" routerLinkActive="active">Home</a>
-      <a href="#" *ngIf="userRoleStatus == 'Coach'" class="list-group-item list-group-item-action bg-light"
-        routerLink="Coach" routerLinkActive="active">Home Coach</a>
-      <a href="#" *ngIf="userRoleStatus == 'Coachee'" class="list-group-item list-group-item-action bg-light"
-        routerLink="Coachee" routerLinkActive="active">Home Coachee</a>
       <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="QnA"
         routerLinkActive="active">Q&A</a>
       <a href="#" class="list-group-item list-group-item-action bg-light" routerLink="Desc"
