impl faq service

--- a/src/app/modules/landing-coachee/landing-coachee.component.html
+++ b/src/app/modules/landing-coachee/landing-coachee.component.html
@@ -213,7 +213,7 @@
                     <div class="row">
                         <div class="form-group col-md-6">
                             <label class="col-sm-6 col-form-label" id="Newsession_select_date">Select date</label>
-                            <input type="datetime-local" class="form-control" id="scheduledStart"
+                            <input type="date" class="form-control" id="scheduledStart"
                                 formControlName="scheduledStart">
                             <!-- <input type="date"  class="form-control" id="scheduledEnd" formControlName="scheduledEnd" > -->
                         </div>
@@ -221,6 +221,7 @@
                             <label class=" col-form-label" id="slotTimeStartlabel">Start time</label>
                             <input class="form-control" formControlName="slotStart" id="slotStart" type="time"
                                 name="slotStart">
+                                
                         </div>
                         <div class="form-group col-md-3">
                             <label class="col-form-label" id="slotTimeEndlabel">End time</label>
