update lcoach and am

--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -2,9 +2,9 @@
 
   <!-- Sidebar -->
   <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading">logo </div>
-    <hr>
-    <div *ngIf=retrievedImage class="d-flex justify-content-center ">
+    <!-- <div class="sidebar-heading">logo </div> -->
+
+    <div  class="d-flex justify-content-center mt-5">
       <!-- <img class="img-thumbnail border-0 rounded-circle" alt="imgUser" [src]="retrievedImage" data-holder-rendered="true" style="width: 180px; height: 180px;"> -->
       <ngx-avatar name="{{user.name}}" size="150">></ngx-avatar>
 
