--- a/src/app/modules/index/index.component.html
+++ b/src/app/modules/index/index.component.html
@@ -33,7 +33,7 @@
 
 
             <div class="site-logo">
-                <a href="index.html" class="text-black"><span class="text-primary">Brand</span></a>
+                <a href="index.html" class="text-black"><span class="text-primary">HOLIGO</span></a>
             </div>
 
             <div class="col-12">
